RESOLVED FIXED291919
feMerge misplaces the HTML element when merging the same feMergeNode multiple times
https://bugs.webkit.org/show_bug.cgi?id=291919
Summary feMerge misplaces the HTML element when merging the same feMergeNode multiple...
Said Abou-Hallawa
Reported 2025-04-22 16:29:38 PDT
Created attachment 475015 [details] test case Open the attached test case Result: the feMerge filter effect is expanded by all its its inputs which are feDropShadows Expected: the feMerge filter effect is expanded by only one input feDropShadow. This because all the feMergeNodes point to the same feDropShadow.
Attachments
test case (1.75 KB, text/html)
2025-04-22 16:29 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2025-04-22 16:30:13 PDT
Said Abou-Hallawa
Comment 2 2025-04-22 18:49:12 PDT
EWS
Comment 3 2025-04-24 16:20:32 PDT
Committed 294088@main (e2873429150b): <https://commits.webkit.org/294088@main> Reviewed commits have been landed. Closing PR #44397 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.